package com.example.jiaji.daggertest.coffee;

/**
 * 汞
 */
interface Pump {
    void pump();
}
