package com.example.jiaji.daggertest.coffee3_test_provides_module;


/**
 * 咖啡机
 */
//public class CoffeeMaker {
//    @Inject
//    Heater heater;
//    @Inject
//    Pump pump;
//
//    public void brew() {
//        heater.on();
//        pump.pump();
//        System.out.println("[_]P coffee! [_]P");
//        heater.off();
//    }
//}
