@startuml
hide empty members
hide empty fields

interface Pump{
    + void pump()
}
note right: 汞（抽水的）

interface Heater{
    + void on();
    + void off();
    + boolean isHot();
}
note left:加热器

class Thermosiphon{
    - final Heater heater
}
note top: 热虹吸(一种抽水的概念)

class ElectricHeater
note top: 电子加热器

class CoffeeMaker{
    ~ Pump pump
    ~ Heater heater
    ~ void brew()//出咖啡
}
note right:咖啡机

class CoffeeApp{
    + main(String[] args)
}
note right:咖啡机控制器


ElectricHeater ..|> Heater
Thermosiphon ..|> Pump
Thermosiphon --> Heater
CoffeeMaker -left-> Heater
CoffeeMaker -up-> Pump
CoffeeApp .up.> CoffeeMaker

@enduml